# Jelly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android-project/: .gitmodules  .project  settings.gradle
android-project/app/: build.gradle
android-project/app/src/androidTest/java/com/maxim/bedcraft/: ExampleInstrumentedTest.java
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/values/: strings.xml
android-project/app/src/main/shaders/: tri.frag  tri.vert
android-project/app/src/test/java/com/maxim/bedcraft/: ExampleUnitTest.java
android-project/gradle/wrapper/: gradle-wrapper.properties
engine/: CMakeLists.txt
engine/src/: android.cpp  api.hpp  app.hpp  debug.hpp  display.hpp  engine.cpp  engine.hpp  entity.hpp  main.cpp  main.hpp  scene.hpp  shared_library.cpp
engine/src/input/: input_binding.hpp  input_event.hpp  input_manager.cpp  input_manager.hpp  input_system.cpp  input_system.hpp
engine/src/resources/: pack.cpp  resource_manager.cpp  resource_manager.hpp  resource_pack.cpp
example/: CMakeLists.txt  game.cpp
imgui/: CMakeLists.txt  imgui_layer.cpp  imgui_layer.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: android-main.cpp  android.cpp  display.cpp  display.hpp  main.cpp  scene.cpp  scene.hpp  shared_library.hpp
src/resources/: manager.cpp  pack.hpp  resource.hpp
